# llm-chatbot

./: .gitignore  README.md  chatbot.py  commands.py  config.py  conversations_history.json  main.py  menu_session.py  pyproject.toml  requirements-dev.txt  requirements.txt  sessions.py  storage.py
.github/workflows/: tests.yml
llm_chatbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: TESTING.md  conftest.py  test_chatbot_convert.py  test_chatbot_fallback.py  test_commands.py  test_menu_session.py  test_run_chatbot_loop.py  test_sessions.py  test_storage.py  test_trim_history.py
